--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         </li>
                         <li class="flex items-start">
                             <i data-feather="check" class="w-4 h-4 mt-1 mr-2 text-red-600"></i>
-                            <span>Discutir estratégias de engajamento de professores e alunos.</span>
+                            <span>Discutir estratégias de engajamento de professores e estudantes.</span>
                         </li>
                         <li class="flex items-start">
                             <i data-feather="check" class="w-4 h-4 mt-1 mr-2 text-red-600"></i>
@@ -129,7 +129,7 @@
                     <ul class="text-gray-600 space-y-2">
                         <li class="flex items-start">
                             <i data-feather="clock" class="w-4 h-4 mt-1 mr-2 text-blue-600"></i>
-                            <span>1 a 2 aulas de duração</span>
+                            <span>1 a 2 aulas de duração em média</span>
                         </li>
                     </ul>
                 </div>
@@ -816,7 +816,7 @@
                         </li>
                         <li class="flex items-start">
                             <i data-feather="chevrons-right" class="w-5 h-5 text-red-600 mr-2 mt-0.5"></i>
-                            <span>Questões baseadas na <b>Matriz de Referência do SARESP</b> com foco nas habilidades fragilizadas da Prova Paulista do 2º bimestre.</span>
+                            <span>Questões baseadas na <b>Matriz de Referência do SARESP</b> com foco nas habilidades fragilizadas da Prova Paulista do 1º & 2º bimestre.</span>
                         </li>
                         <li class="flex items-start">
                             <i data-feather="chevrons-right" class="w-5 h-5 text-red-600 mr-2 mt-0.5"></i>
