--- a/index.html
+++ b/index.html
@@ -1126,6 +1126,13 @@
                     <a href="#" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                         Ver Materiais <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
                     </a>
+                       <h3 class="text-xl font-bold text-gray-800 mb-3">[SAEB 2023 á 2025 Simulado 01 & 02]</h3>
+                    <p class="text-gray-600 mb-4">
+                        Mapa de proficiencia comparativo consolidado SAEB 2023, SIMULADO SAEB S01 & SIMULADO SAEB S02.
+                    </p>
+                    <a href="https://lookerstudio.google.com/reporting/fe86b4c8-0df5-4d02-9412-8ddaedf949f0" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                        Ver Painel <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
+                    </a>
                 </div>
             </div>
         </div>
