--- a/index.html
+++ b/index.html
@@ -1133,7 +1133,7 @@
                     <a href="https://lookerstudio.google.com/reporting/fe86b4c8-0df5-4d02-9412-8ddaedf949f0" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                         Ver Painel <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
                     </a>
-                    <h3 class="text-xl font-bold text-gray-800 mb-3">Mapa Proficiência - Análises de performance das escolas/h3>
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">Mapa Proficiência - Análises de performance das escolas</h3>
                     <p class="text-gray-600 mb-4">
                         Analises em função das metas das escolas para o SAEB 2025.
                     </p>
