--- a/index.html
+++ b/index.html
@@ -1091,6 +1091,19 @@
                         Acessar Documento <i data-feather="external-link" class="w-4 h-4 ml-1"></i>
                     </a>
                 </div>
+                <div class="grid md:grid-cols-3 gap-8">
+                <div class="bg-red-50 p-6 rounded-lg shadow-md card-hover transition duration-300" data-aos="fade-up" data-aos-delay="100">
+                    <div class="text-red-600 mb-4">
+                        <i data-feather="file-text" class="w-10 h-10"></i>
+                    </div>
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">AMURAL POSITIVO 90 DIAS PARA O SAEB</h3>
+                    <p class="text-gray-600 mb-4">
+                        Modelo automatico de mensagens positivas para os estudantes.
+                    </p>
+                    <a href="https://pne-de-cai.github.io/menssagenspositivassaeb/" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                        Apresentação das menssagens <i data-feather="download" class="w-4 h-4 ml-1"></i>
+                    </a>
+                </div>
                 <div class="bg-blue-50 p-6 rounded-lg shadow-md card-hover transition duration-300" data-aos="fade-up" data-aos-delay="200">
                     <div class="text-blue-600 mb-4">
                         <i data-feather="grid" class="w-10 h-10"></i>
