--- a/index.html
+++ b/index.html
@@ -1067,6 +1067,18 @@
                     <div class="text-red-600 mb-4">
                         <i data-feather="file-text" class="w-10 h-10"></i>
                     </div>
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">TENTASAEB</h3>
+                    <p class="text-gray-600 mb-4">
+                       Apresentação gameficada para o segundo dia D
+                    </p>
+                    <a href="https://docs.google.com/presentation/d/1XKN-BuDE5UDnblEe2y0UgEpGt2WBg2qq/edit?usp=drive_link&ouid=101532812359216929017&rtpof=true&sd=true" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                        Baixar Slides <i data-feather="download" class="w-4 h-4 ml-1"></i>
+                    </a>
+                </div>
+                  <div class="bg-red-50 p-6 rounded-lg shadow-md card-hover transition duration-300" data-aos="fade-up" data-aos-delay="100">
+                    <div class="text-red-600 mb-4">
+                        <i data-feather="file-text" class="w-10 h-10"></i>
+                    </div>
                     <h3 class="text-xl font-bold text-gray-800 mb-3">Apresentações EEC</h3>
                     <p class="text-gray-600 mb-4">
                         Slides utilizados nas reuniões de alinhamento e ATPC.
@@ -1152,6 +1164,18 @@
                     </p>
                     <a href="https://pne-de-cai.github.io/menssagenspositivassaeb/" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                         Apresentação das menssagens <i data-feather="download" class="w-4 h-4 ml-1"></i>
+                    </a>
+                </div>
+                  <div class="bg-red-50 p-6 rounded-lg shadow-md card-hover transition duration-300" data-aos="fade-up" data-aos-delay="100">
+                    <div class="text-red-600 mb-4">
+                        <i data-feather="file-text" class="w-10 h-10"></i>
+                    </div>
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">AMURAL POSITIVO 90 DIAS PARA O SAEB</h3>
+                    <p class="text-gray-600 mb-4">
+                        Modelo automatico de mensagens positivas para os estudantes.
+                    </p>
+                    <a href="https://drive.google.com/drive/folders/1GBdh_BFbUSPHZ6QM2fDdnz3uSZMRdyFg?usp=drive_link" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                       Farol SAEB & Ficha Individual das Escolas <i data-feather="download" class="w-4 h-4 ml-1"></i>
                     </a>
                 </div>
             </div>
