--- a/index.html
+++ b/index.html
@@ -1144,9 +1144,9 @@
                     <div class="text-red-600 mb-4">
                         <i data-feather="grid" class="w-10 h-10"></i>
                     </div>
-                    <h3 class="text-xl font-bold text-gray-800 mb-3">Cards das Habilidades Fragilizadas</h3>
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">Paineis de Analises</h3>
                     <p class="text-gray-600 mb-4">
-                        Materiais focados nas habilidades com menor índice de acerto.
+                        Materiais focados nos niveis e profisiencias para o SAEB, performace nos simulados .
                     </p>
                     <a href="#" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                         Ver Materiais <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
