--- a/index.html
+++ b/index.html
@@ -1075,6 +1075,18 @@
                         Baixar Slides <i data-feather="download" class="w-4 h-4 ml-1"></i>
                     </a>
                 </div>
+                 <div class="bg-red-50 p-6 rounded-lg shadow-md card-hover transition duration-300" data-aos="fade-up" data-aos-delay="100">
+                    <div class="text-blue-600 mb-4">
+                        <i data-feather="file-text" class="w-10 h-10"></i>
+                    </div>
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">TENTASAEB - Materiais para customização</h3>
+                    <p class="text-gray-600 mb-4">
+                       Apresentação gameficada TENTASAEB - editaveis 
+                    </p>
+                    <a href="https://drive.google.com/drive/folders/1Kyvzs7968zB4dMd9-JQEjfwq2L2Ab2BT?usp=drive_link" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                       Acesse os arquivos <i data-feather="download" class="w-4 h-4 ml-1"></i>
+                    </a>
+                </div>
                   <div class="bg-red-50 p-6 rounded-lg shadow-md card-hover transition duration-300" data-aos="fade-up" data-aos-delay="100">
                     <div class="text-red-600 mb-4">
                         <i data-feather="file-text" class="w-10 h-10"></i>
@@ -1170,7 +1182,7 @@
                     <div class="text-red-600 mb-4">
                         <i data-feather="file-text" class="w-10 h-10"></i>
                     </div>
-                    <h3 class="text-xl font-bold text-gray-800 mb-3">AMURAL POSITIVO 90 DIAS PARA O SAEB</h3>
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">MURAL POSITIVO 90 DIAS PARA O SAEB</h3>
                     <p class="text-gray-600 mb-4">
                         Modelo automatico de mensagens positivas para os estudantes.
                     </p>
