--- a/index.html
+++ b/index.html
@@ -1203,6 +1203,32 @@
                         Ver Painel <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
                     </a>
                 </div>
+                  <div class="bg-red-50 p-6 rounded-lg shadow-md card-hover transition duration-300" data-aos="fade-up" data-aos-delay="300">
+                    <div class="text-blue-600 mb-4">
+                        <i data-feather="grid" class="w-10 h-10"></i>
+                    </div>
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">Paulistão SARESP</h3>
+                    <p class="text-gray-600 mb-4">
+                        Apresentação Gamificada para recomposição SARESP.
+                    </p>
+                    <a href="https://seducsp-my.sharepoint.com/:p:/g/personal/valdomirosousa_professor_educacao_sp_gov_br/EUzGfrfAxkVDs9P5eNcWftUB1VUkSgXrq91RQk5BoxdqFA?e=p5m5uT" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                        6° Anos  <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
+                    </a>
+                       <h3 class="text-xl font-bold text-gray-800 mb-3">Paulistão SARESP</h3>
+                    <p class="text-gray-600 mb-4">
+                        Apresentação Gamificada para recomposição SARESP.
+                    </p>
+                    <a href="https://lookerstudio.google.com/reporting/fe86b4c8-0df5-4d02-9412-8ddaedf949f0" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                        7° Anos <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
+                    </a>
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">Paulistão SARESP</h3>
+                    <p class="text-gray-600 mb-4">
+                        Apresentação Gamificada para recomposição SARESP.
+                    </p>
+                    <a href="https://lookerstudio.google.com/reporting/26bda7ed-8e33-4a99-92a3-b4179cd98195" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                        8° Anos <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
