--- a/index.html
+++ b/index.html
@@ -1218,14 +1218,14 @@
                     <p class="text-gray-600 mb-4">
                         Apresentação Gamificada para recomposição SARESP.
                     </p>
-                    <a href="https://lookerstudio.google.com/reporting/fe86b4c8-0df5-4d02-9412-8ddaedf949f0" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                    <a href="https://seducsp-my.sharepoint.com/:p:/g/personal/valdomirosousa_professor_educacao_sp_gov_br/Ed4QJ2tCf6VAo7tLJe8BITgByFl3TRmu7XhxuBwzepVghg?e=spSt3a" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                         7° Anos <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
                     </a>
                     <h3 class="text-xl font-bold text-gray-800 mb-3">Paulistão SARESP</h3>
                     <p class="text-gray-600 mb-4">
                         Apresentação Gamificada para recomposição SARESP.
                     </p>
-                    <a href="https://lookerstudio.google.com/reporting/26bda7ed-8e33-4a99-92a3-b4179cd98195" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                    <a href="#" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                         8° Anos <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
                     </a>
                 </div>
