--- a/index.html
+++ b/index.html
@@ -1202,6 +1202,13 @@
                     <a href="https://lookerstudio.google.com/reporting/26bda7ed-8e33-4a99-92a3-b4179cd98195" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                         Ver Painel <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
                     </a>
+                       <h3 class="text-xl font-bold text-gray-800 mb-3">Mapa Proficiência - Análises de performance das escolas</h3>
+                    <p class="text-gray-600 mb-4">
+                        Data base para contagens de Estudante SAEB 2025.
+                    </p>
+                    <a href="https://lookerstudio.google.com/reporting/78cc6109-7e34-4738-92f0-66d0e2b87850" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                        Ver Painel <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
+                    </a>
                 </div>
                   <div class="bg-red-50 p-6 rounded-lg shadow-md card-hover transition duration-300" data-aos="fade-up" data-aos-delay="300">
                     <div class="text-blue-600 mb-4">
