--- a/index.html
+++ b/index.html
@@ -1202,7 +1202,7 @@
                     <a href="https://lookerstudio.google.com/reporting/26bda7ed-8e33-4a99-92a3-b4179cd98195" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                         Ver Painel <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
                     </a>
-                       <h3 class="text-xl font-bold text-gray-800 mb-3">Mapa Proficiência - Análises de performance das escolas</h3>
+                       <h3 class="text-xl font-bold text-gray-800 mb-3">Data Base SAEB</h3>
                     <p class="text-gray-600 mb-4">
                         Data base para contagens de Estudante SAEB 2025.
                     </p>
