--- a/index.html
+++ b/index.html
@@ -1183,31 +1183,31 @@
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 mb-3">Paineis de Analises</h3>
                     <p class="text-gray-600 mb-4">
-                        Materiais focados nos niveis e profisiencias para o SAEB, performace nos simulados .
+                        Materiais focados nos niveis e proficiencias para o SAEB, performace nos simulados .
                     </p>
                     <a href="#" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
-                        Ver Materiais <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
+                        Ver Paineis de Analises <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
                     </a>
                        <h3 class="text-xl font-bold text-gray-800 mb-3">[SAEB 2023 á 2025 Simulado 01 & 02]</h3>
                     <p class="text-gray-600 mb-4">
                         Mapa de proficiencia comparativo consolidado SAEB 2023, SIMULADO SAEB S01 & SIMULADO SAEB S02.
                     </p>
                     <a href="https://lookerstudio.google.com/reporting/fe86b4c8-0df5-4d02-9412-8ddaedf949f0" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
-                        Ver Painel <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
+                        Ver Painel SAEB Simulad <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
                     </a>
                     <h3 class="text-xl font-bold text-gray-800 mb-3">Mapa Proficiência - Análises de performance das escolas</h3>
                     <p class="text-gray-600 mb-4">
                         Analises em função das metas das escolas para o SAEB 2025.
                     </p>
                     <a href="https://lookerstudio.google.com/reporting/26bda7ed-8e33-4a99-92a3-b4179cd98195" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
-                        Ver Painel <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
+                        Ver Painel Mapa Proficiência <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
                     </a>
                        <h3 class="text-xl font-bold text-gray-800 mb-3">Data Base SAEB</h3>
                     <p class="text-gray-600 mb-4">
                         Data base para contagens de Estudante SAEB 2025.
                     </p>
                     <a href="https://lookerstudio.google.com/reporting/78cc6109-7e34-4738-92f0-66d0e2b87850" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
-                        Ver Painel <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
+                        Ver Painel Data Base SAEB <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
                     </a>
                 </div>
                   <div class="bg-red-50 p-6 rounded-lg shadow-md card-hover transition duration-300" data-aos="fade-up" data-aos-delay="300">
