--- a/index.html
+++ b/index.html
@@ -1120,12 +1120,12 @@
                     <div class="text-blue-600 mb-4">
                         <i data-feather="grid" class="w-10 h-10"></i>
                     </div>
-                    <h3 class="text-xl font-bold text-gray-800 mb-3">Plano de Ação Modelo</h3>
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">Mídia Kit - Rede sociais </h3>
                     <p class="text-gray-600 mb-4">
-                        <b>Template</b> para sistematização do planejamento de recomposição na U.E.
+                        <b>Templates</b> para sistematização e posionamento em redes
                     </p>
-                    <a href="https://docs.google.com/document/d/15Wkk8pbTmEbMG9e-VoJL-WN98feTIjQTeB1pb0kYnBU/edit?usp=drive_link" class="inline-flex items-center text-blue-600 hover:text-blue-800 font-medium">
-                        Acessar Documento <i data-feather="external-link" class="w-4 h-4 ml-1"></i>
+                    <a href="https://pne-de-cai.github.io/Midia-Kit-SAEB-2025/" class="inline-flex items-center text-blue-600 hover:text-blue-800 font-medium">
+                        Acessar Mídia Kit <i data-feather="external-link" class="w-4 h-4 ml-1"></i>
                     </a>
                 </div>
                 <div class="bg-blue-50 p-6 rounded-lg shadow-md card-hover transition duration-300" data-aos="fade-up" data-aos-delay="200">
