--- a/index.html
+++ b/index.html
@@ -1246,7 +1246,7 @@
                     <p class="text-gray-600 mb-4">
                         Apresentação Gamificada para recomposição SARESP.
                     </p>
-                    <a href="#" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                    <a href="https://seducsp-my.sharepoint.com/:p:/g/personal/valdomirosousa_professor_educacao_sp_gov_br/EfMsh56AZx9LlBy8C_gumGsBdRqNOcyQ2rqbtpJe_Hzv5g?e=932Tvf" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                         1° Serie <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
                     </a>
                             <h3 class="text-xl font-bold text-gray-800 mb-3">Paulistão SARESP</h3>
