--- a/index.html
+++ b/index.html
@@ -1193,7 +1193,7 @@
                         Mapa de proficiencia comparativo consolidado SAEB 2023, SIMULADO SAEB S01 & SIMULADO SAEB S02.
                     </p>
                     <a href="https://lookerstudio.google.com/reporting/fe86b4c8-0df5-4d02-9412-8ddaedf949f0" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
-                        Ver Painel SAEB Simulad <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
+                        Ver Painel SAEB Simulado <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
                     </a>
                     <h3 class="text-xl font-bold text-gray-800 mb-3">Mapa Proficiência - Análises de performance das escolas</h3>
                     <p class="text-gray-600 mb-4">
@@ -1209,11 +1209,11 @@
                     <a href="https://lookerstudio.google.com/reporting/817124ac-2452-4fca-a804-155c0b57074f" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                         Ver Painel de Questões <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
                     </a>
-                       <h3 class="text-xl font-bold text-gray-800 mb-3">Data Base SAEB</h3>
+                       <h3 class="text-xl font-bold text-gray-800 mb-3">Data Base SAEB-<B>EM MANUTENÇÃO</B></h3>
                     <p class="text-gray-600 mb-4">
                         Data base para contagens de Estudante SAEB 2025.
                     </p>
-                    <a href="https://lookerstudio.google.com/reporting/78cc6109-7e34-4738-92f0-66d0e2b87850" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                    <a href="#" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                         Ver Painel Data Base SAEB <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
                     </a>
                 </div>
