--- a/index.html
+++ b/index.html
@@ -1228,7 +1228,7 @@
                     <a href="https://seducsp-my.sharepoint.com/:p:/g/personal/valdomirosousa_professor_educacao_sp_gov_br/EUzGfrfAxkVDs9P5eNcWftUB1VUkSgXrq91RQk5BoxdqFA?e=p5m5uT" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                         6° Anos  <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
                     </a>
-                       <p> <a href="https://seducsp-my.sharepoint.com/:p:/g/personal/valdomirosousa_professor_educacao_sp_gov_br/EUzGfrfAxkVDs9P5eNcWftUB1VUkSgXrq91RQk5BoxdqFA?e=p5m5uT" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                       <p> <a href="#" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                         6° Anos PDF blocos Separados <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i> </p>
                     </a>
                        <h3 class="text-xl font-bold text-gray-800 mb-3">Paulistão SARESP</h3>
@@ -1238,7 +1238,7 @@
                     <a href="https://seducsp-my.sharepoint.com/:p:/g/personal/valdomirosousa_professor_educacao_sp_gov_br/Ed4QJ2tCf6VAo7tLJe8BITgByFl3TRmu7XhxuBwzepVghg?e=spSt3a" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                         7° Anos <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
                     </a>
-                        <p><a href="https://seducsp-my.sharepoint.com/:p:/g/personal/valdomirosousa_professor_educacao_sp_gov_br/Ed4QJ2tCf6VAo7tLJe8BITgByFl3TRmu7XhxuBwzepVghg?e=spSt3a" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                        <p><a href="#" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                        7° Anos PDF blocos Separados <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i> </p>
                     </a>
                     <h3 class="text-xl font-bold text-gray-800 mb-3">Paulistão SARESP</h3>
@@ -1248,6 +1248,9 @@
                     <a href="https://seducsp-my.sharepoint.com/:p:/g/personal/valdomirosousa_professor_educacao_sp_gov_br/EVtS0aijgZBDkpu4JtSO4TIBBcWydXKU7bfasyvABCod9A?e=JECfro" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                         8° Anos <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
                     </a>
+                      <p><a href="#" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                       8° Anos PDF blocos Separados <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i> </p>
+                    </a>
                         <h3 class="text-xl font-bold text-gray-800 mb-3">Paulistão SARESP</h3>
                     <p class="text-gray-600 mb-4">
                         Apresentação Gamificada para recomposição SARESP.
@@ -1255,12 +1258,18 @@
                     <a href="https://seducsp-my.sharepoint.com/:p:/g/personal/valdomirosousa_professor_educacao_sp_gov_br/EfMsh56AZx9LlBy8C_gumGsBdRqNOcyQ2rqbtpJe_Hzv5g?e=932Tvf" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                         1° Serie <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
                     </a>
+                      <p><a href="#" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                       1° Serie PDF blocos Separados <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i> </p>
+                    </a>
                             <h3 class="text-xl font-bold text-gray-800 mb-3">Paulistão SARESP</h3>
                     <p class="text-gray-600 mb-4">
                         Apresentação Gamificada para recomposição SARESP.
                     </p>
                     <a href="https://seducsp-my.sharepoint.com/:p:/g/personal/valdomirosousa_professor_educacao_sp_gov_br/EV_bqELnWu5JqdTBMps3Tp4BjEttQdbEbqND78tIPKS4gw?e=6lYs0p" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                         2° Serie <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
+                    </a>
+                      <p><a href="#" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                       2° Serie PDF blocos Separados <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i> </p>
                     </a>
                 </div>
             </div>
