--- a/index.html
+++ b/index.html
@@ -1177,6 +1177,18 @@
                        Farol SAEB & Ficha Individual das Escolas <i data-feather="download" class="w-4 h-4 ml-1"></i>
                     </a>
                 </div>
+                  <div class="bg-blue-50 p-6 rounded-lg shadow-md card-hover transition duration-300" data-aos="fade-up" data-aos-delay="100">
+                    <div class="text-blue-600 mb-4">
+                        <i data-feather="file-text" class="w-10 h-10"></i>
+                    </div>
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">Mini simulados SEDUC</h3>
+                    <p class="text-gray-600 mb-4">
+                       Questões e gabaritos de sugestão para as escolas 
+                    </p>
+                    <a href="https://drive.google.com/drive/folders/1HkgM5yMhWwYjU_4zEiXrjgVV5cGnpphb?usp=drive_link" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                       Mini simulados 5°,9° e 3° <i data-feather="download" class="w-4 h-4 ml-1"></i>
+                    </a>
+                </div>
                   <div class="bg-red-50 p-6 rounded-lg shadow-md card-hover transition duration-300" data-aos="fade-up" data-aos-delay="300">
                     <div class="text-red-600 mb-4">
                         <i data-feather="grid" class="w-10 h-10"></i>
