--- a/index.html
+++ b/index.html
@@ -1185,8 +1185,20 @@
                     <p class="text-gray-600 mb-4">
                        Questões e gabaritos de sugestão para as escolas 
                     </p>
-                    <a href="https://drive.google.com/drive/folders/1HkgM5yMhWwYjU_4zEiXrjgVV5cGnpphb?usp=drive_link" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
-                       Mini simulados 5°,9° e 3° <i data-feather="download" class="w-4 h-4 ml-1"></i>
+                    <a href="https://drive.google.com/drive/folders/1VY2oK6NGkwpqUaQiy7VniTBpwfG2l3Lh?usp=drive_link" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                       Mini simulados 5° anos <i data-feather="download" class="w-4 h-4 ml-1"></i>
+                    </a>
+                        <p class="text-gray-600 mb-4">
+                       Questões e gabaritos de sugestão para as escolas 
+                    </p>
+                    <a href="https://drive.google.com/drive/folders/11mcIolPlkCd97bRMt5zVEQaUIuxwJysi?usp=drive_link" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                       Mini simulados 9° anos <i data-feather="download" class="w-4 h-4 ml-1"></i>
+                    </a>
+                        <p class="text-gray-600 mb-4">
+                       Questões e gabaritos de sugestão para as escolas 
+                    </p>
+                    <a href="https://drive.google.com/drive/folders/1KMSoKfO3wgzRYlOFvYgl0U4qOP91plD_?usp=drive_link" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                       Mini simulados 3° Serie <i data-feather="download" class="w-4 h-4 ml-1"></i>
                     </a>
                 </div>
                   <div class="bg-red-50 p-6 rounded-lg shadow-md card-hover transition duration-300" data-aos="fade-up" data-aos-delay="300">
