--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                             <div class="w-8 h-8 rounded-full bg-red-100 flex items-center justify-center mr-2">
                                 <i data-feather="user" class="w-4 h-4 text-red-600"></i>
                             </div>
-                            <span class="text-gray-700">JOELMA BATISTA SANTOS</span>
+                            <span class="text-gray-700">JOELIA BATISTA SANTOS</span>
                         </div>
                         
                         <div class="flex items-center">
@@ -255,7 +255,7 @@
                             <div class="w-8 h-8 rounded-full bg-red-100 flex items-center justify-center mr-2">
                                 <i data-feather="user" class="w-4 h-4 text-red-600"></i>
                             </div>
-                            <span class="text-gray-700">MIRO PEREIRA DE SOUSA CARVALHO</span>
+                            <span class="text-gray-700">MIRO CARVALHO</span>
                         </div>
                         
                         <div class="flex items-center">
