--- a/index.html
+++ b/index.html
@@ -1245,7 +1245,14 @@
                     <div class="text-blue-600 mb-4">
                         <i data-feather="grid" class="w-10 h-10"></i>
                     </div>
-                    <h3 class="text-xl font-bold text-gray-800 mb-3">Paulistão SARESP</h3>
+                        <h3 class="text-xl font-bold text-gray-800 mb-3">GABARITO - Paulistão SARESP</h3>
+                    <p class="text-gray-600 mb-4">
+                        MODELO DE GABARITO.
+                    </p>
+                    <a href="https://docs.google.com/document/d/1AyY_wZRoFWQnMa7zeUD8-2CcW841aA5e/edit?usp=drive_link&ouid=101532812359216929017&rtpof=true&sd=true" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                       TODOS OS SEGMENTOS <i data-feather="arrow-right" class="w-4 h-4 ml-1"></i>
+                    </a>
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">GABARITO - Paulistão SARESP</h3>
                     <p class="text-gray-600 mb-4">
                         Apresentação Gamificada para recomposição SARESP.
                     </p>
