--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,8 @@
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 mb-3">HUB - Evidênçias </h3>
                     <p class="text-gray-600 mb-4">
-                       Post aqui as evidências das sua atividades para a SEMANA dia <b>D</b>, acesse o link da sua escola abra o arquivo de texto.</p>
+                       Post aqui as evidências das sua atividades para a SEMANA dia <b>D</b>,
+                       </p>
                     <a href="https://pne-de-cai.github.io/hubdeevidencias/" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                        Upload de evidências <i data-feather="upload" class="w-4 h-4 ml-1"></i>
                     </a>
