--- a/index.html
+++ b/index.html
@@ -1061,18 +1061,6 @@
                     Acesse os documentos de apoio, apresentações e <b>templates</b> para a implementação das ações em sua Unidade Escolar.
                 </p>
             </div>
-              <div class="bg-red-50 p-6 rounded-lg shadow-md card-hover transition duration-300" data-aos="fade-up" data-aos-delay="100">
-                    <div class="text-blue-600 mb-4">
-                        <i data-feather="file-text" class="w-10 h-10"></i>
-                    </div>
-                    <h3 class="text-xl font-bold text-gray-800 mb-3">HUB - Evidênçias </h3>
-                    <p class="text-gray-600 mb-4">
-                       Post aqui as evidências das sua atividades para a SEMANA dia <b>D</b>,
-                       </p>
-                    <a href="https://pne-de-cai.github.io/hubdeevidencias/" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
-                       Upload de evidências <i data-feather="upload" class="w-4 h-4 ml-1"></i>
-                    </a>
-                </div>
             <div class="grid md:grid-cols-3 gap-8">
                 <div class="bg-red-50 p-6 rounded-lg shadow-md card-hover transition duration-300" data-aos="fade-up" data-aos-delay="100">
                     <div class="text-red-600 mb-4">
@@ -1211,6 +1199,18 @@
                     </p>
                     <a href="https://drive.google.com/drive/folders/1KMSoKfO3wgzRYlOFvYgl0U4qOP91plD_?usp=drive_link" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
                        Mini simulados 3° Serie <i data-feather="download" class="w-4 h-4 ml-1"></i>
+                    </a>
+                </div>
+                 <div class="bg-red-50 p-6 rounded-lg shadow-md card-hover transition duration-300" data-aos="fade-up" data-aos-delay="100">
+                    <div class="text-blue-600 mb-4">
+                        <i data-feather="file-text" class="w-10 h-10"></i>
+                    </div>
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">HUB - Evidênçias </h3>
+                    <p class="text-gray-600 mb-4">
+                       Post aqui as evidências das suas atividades para a SEMANA dia <b>D</b>.
+                       </p>
+                    <a href="https://pne-de-cai.github.io/hubdeevidencias/" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium">
+                       Upload de evidências <i data-feather="upload" class="w-4 h-4 ml-1"></i>
                     </a>
                 </div>
                   <div class="bg-red-50 p-6 rounded-lg shadow-md card-hover transition duration-300" data-aos="fade-up" data-aos-delay="300">
