--- a/index.html
+++ b/index.html
@@ -1205,7 +1205,7 @@
                     <div class="text-blue-600 mb-4">
                         <i data-feather="file-text" class="w-10 h-10"></i>
                     </div>
-                    <h3 class="text-xl font-bold text-gray-800 mb-3">HUB - Evidênçias </h3>
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">HUB - Evidências </h3>
                     <p class="text-gray-600 mb-4">
                        Post aqui as evidências das suas atividades para a SEMANA dia <b>D</b>.
                        </p>
