--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <a href="#paulistao" class="text-gray-700 hover:text-red-600 font-medium">Paulistão SARESP</a>
                 <a href="#roteiro" class="text-gray-700 hover:text-red-600 font-medium">Roteiro Aplicação</a>
                 <a href="#materiais" class="text-gray-700 hover:text-red-600 font-medium">Materiais</a>
+                 <a href="index2.html" class="text-gray-700 hover:text-red-600 font-medium">Paulistão SARESP - VOL II</a>
             </nav>
             
             <button id="mobile-menu-button" class="md:hidden text-gray-700">
@@ -61,6 +62,7 @@
             <a href="#paulistao" class="block py-2 text-gray-700 hover:text-red-600">Paulistão SARESP</a>
             <a href="#roteiro" class="block py-2 text-gray-700 hover:text-red-600">Roteiro Aplicação</a>
             <a href="#materiais" class="block py-2 text-gray-700 hover:text-red-600">Materiais</a>
+             <a href="index2.html" class="block py-2 text-gray-700 hover:text-red-600">Paulistão SARESP - VOL II</a>
         </div>
     </header>
 
