--- a/index2.html
+++ b/index2.html
@@ -84,7 +84,7 @@
     <section class="gradient-bg text-white py-12">
         <div class="container mx-auto px-4 text-center">
             <h2 class="text-3xl md:text-4xl font-bold mb-4">Conteúdos Fragilizados no 3° Bimestre</h2>
-            <p class="text-xl mb-8 max-w-3xl mx-auto">Materiais focados nas disciplinas com menores índices de acerto nas provas do SARESP</p>
+            <p class="text-xl mb-8 max-w-3xl mx-auto">Materiais focados nas disciplinas com menores índices de acerto nas PROVAS PAULISTAS </p>
             <div class="flex flex-wrap justify-center gap-4">
                 <span class="bg-white text-blue-800 px-4 py-2 rounded-full font-medium">Matemática</span>
                 <span class="bg-white text-blue-800 px-4 py-2 rounded-full font-medium">Língua Inglesa</span>
